--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-    Üdvözlet!
+    <p>Üdvözlet!</p>
+    <a href="./cv.html">Ez itt a CV-m a második gyakorlat alapján</a>
 </body>
 </html>
