--- a/HajosTeszt/HajosTeszt/wwwroot/cv.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>CV</title>
+    <link href="cv.css" rel="stylesheet" />
 </head>
 <body>
     <h1>CV</h1>
@@ -13,22 +14,23 @@
         féle formátumokban. Legtöbbet társasozni szoktam
         barátokkal, illetve családdal. Az utóbbi időben rákaptam a sakkra is
     </p>
-    <h2></h2>
-    <p>Kedvenc könyveim</p>
+    
+    
     <div>
+        <h3>Kedvenc könyveim</h3>
         <ul>
             <li>Victor Hugo - Nyomorultak</li>
             <li>Márquez - Szerelemről és más démonokról </li>
             <li>Ken Folett - Katedrális </li>
         </ul>
-        <p> Kedvenc sportjaim</p>
+        <h3> Kedvenc sportjaim</h3>
         <ol>
             <li>Futás</li>
-            <li>Spikeball</li>
+            <li id="csakugy">Spikeball</li>
             <li>Asztalitenisz</li>
         </ol>
     </div>
-    <p>Itt egy kép a <span>spikeball</span>-ról:</p>
+    <p class="klasz">Itt egy kép a <span>spikeball</span>-ról:</p>
     <img src="Kepek/spikeball.jpg" alt="Spikeball játék közben">
 
 
