--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -7,5 +7,6 @@
 <body>
     <p>Üdvözlet!</p>
     <a href="./cv.html">Ez itt a CV-m a második gyakorlat alapján</a>
+    <p><a href="./cv2.html">4. gyakorlat</a></p>
 </body>
 </html>
