--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -8,5 +8,6 @@
     <p>Üdvözlet!</p>
     <a href="./cv.html">Ez itt a CV-m a második gyakorlat alapján</a>
     <p><a href="./cv2.html">4. gyakorlat</a></p>
+    <p> <a href="./jsgyak.html">6. gyakorlat: js gyak</a></p>
 </body>
 </html>
