7.gyak -> js kerdesek betoltese

--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href="hajos.css">
+    <script src="hetedik.js"></script>
 </head>
 <body>
     <div id="külső">
@@ -22,8 +23,9 @@
             </div>
         </div>
         <div id="vezérlő">
-            <div class="kattintható">Vissza</div>
-            <div class="kattintható">Előre</div>
+            <div class="kattintható" id="vissza">Vissza</div>
+            <div class="kattintható" id="elore" onclick="">Előre</div>
         </div>
     </div>
 </body>
+</html>
