9 Kérdések megjelenítése egyesével 04.22

--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -9,5 +9,6 @@
     <a href="./cv.html">Ez itt a CV-m a második gyakorlat alapján</a>
     <p><a href="./cv2.html">4. gyakorlat</a></p>
     <p> <a href="./jsgyak.html">6. gyakorlat: js gyak</a></p>
+    <p> <a href="./hajo.html">HAJO</a></p>
 </body>
 </html>
