--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" href="hajos.css">
-    <script src="hetedik.js"></script>
+    <script src="tizedik.js"></script>
 </head>
 <body>
     <div id="külső">
@@ -14,17 +14,17 @@
 
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes kattintható jó">Válasz 1</div>
-                <div id="válasz2" class="kerdes kattintható rossz">Válasz 2</div>
-                <div id="válasz3" class="kerdes kattintható rossz">Válasz 3</div>
+                <div id="válasz1" class="kerdes kattintható jó" onclick="választás(1)">Válasz 1</div>
+                <div id="válasz2" class="kerdes kattintható rossz" onclick="választás(2)">Válasz 2</div>
+                <div id="válasz3" class="kerdes kattintható rossz" onclick="választás(3)">Válasz 3</div>
             </div>
             <div id="kép">
                 <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
             </div>
         </div>
         <div id="vezérlő">
-            <div class="kattintható" id="vissza">Vissza</div>
-            <div class="kattintható" id="elore" onclick="">Előre</div>
+            <div class="kattintható" id="vissza" onclick="f(-1)">Vissza</div>
+            <div class="kattintható" id="elore" onclick="f(1)">Előre</div>
         </div>
     </div>
 </body>
